Fix code redemption and countdown align

--- a/src/assets/styles/pages/_landing.scss
+++ b/src/assets/styles/pages/_landing.scss
@@ -40,7 +40,7 @@
     font-size: 36px;
     font-weight: 300;
     letter-spacing: 0.3em;
-    margin: 20px 0;
+    margin: 20px auto;
   }
 
   &__text-return {
